# simulator-mcp-servers

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.agents/skills/releasing-a-version/: SKILL.md
.agents/skills/testing-launcher-transport/: SKILL.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: get-next-card.agent.md  implement-issue.agent.md  issue-planner.agent.md  work-issue.agent.md
.github/workflows/: ci.yml  release.yml
crates/iracing-mcp/: Cargo.toml
crates/iracing-mcp/src/: handler.rs  lib.rs
crates/iracing-mcp/src/adapter/: mod.rs  sdk.rs  stub.rs
crates/iracing-mcp/tests/: http_transport.rs  live_mcp_suite.rs  verification_regressions.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: config.rs  main.rs  runner.rs  settings_page.html  settings_server.rs  singleton.rs
crates/launcher/src/ui/: mod.rs  tray.rs
crates/lmu-mcp/: Cargo.toml
crates/lmu-mcp/src/: handler.rs  lib.rs
crates/lmu-mcp/src/adapter/: mod.rs  sdk.rs  stub.rs
crates/lmu-mcp/tests/: http_transport.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: capabilities.rs  config.rs  jsonrpc.rs  lib.rs  verify.rs
crates/mcp-core/src/transport/: http.rs  mod.rs  stdio.rs
docs/: iracing-mcp-server.md  lmu-mcp-server.md
docs/adr/: 0001-project-layout.md  0002-lmu-adapter-design.md  0003-single-active-simulator-constraint.md  README.md
docs/assets/: README.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
e2e/tests/: settings.spec.ts
