[workspace]
resolver = "2"
members = [
    "crates/mcp-core",
    "crates/iracing-mcp",
    "crates/lmu-mcp",
    "crates/launcher",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/simracecenter/simulator-mcp-servers"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "net", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
