[package]
name = "iracing-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "iRacing MCP server (skeleton — adapter/tool migration tracked separately, see ADR 0001 D5)."

[dependencies]
mcp-core = { path = "../mcp-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
