[package]
name = "iracing-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "iRacing MCP server — adapter/tool set ported from margic/iracing-mcp (ADR 0001 D5)."

[dependencies]
mcp-core = { path = "../mcp-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
thiserror.workspace = true

# The `iracing`/`iracing-broadcast` crates gate almost their entire public API
# (and, for `iracing-broadcast`, the whole crate) behind `target_os = "windows"`
# — the iRacing SDK's shared-memory telemetry map and broadcast-message API are
# Windows-only. `crates/iracing-mcp/src/adapter/sdk.rs` mirrors that: the real
# `SdkAdapter` implementation is `#[cfg(windows)]`, with a `#[cfg(not(windows))]`
# fallback that reports `AdapterError::NotConnected` for every method so the
# crate still compiles (and its stub-backed tests still run) on Linux.
[target.'cfg(windows)'.dependencies]
iracing = "0.4.1"
iracing-broadcast = "0.1.0"
serde_yaml = "0.8"
winapi = { version = "0.3", features = [
  "errhandlingapi", "handleapi", "memoryapi", "winnt", "winuser"
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = "0.7"
http-body-util = "0.1"
tower = "0.5"
