[package]
name = "lmu-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Le Mans Ultimate (LMU) MCP server — LmuAdapter per ADR 0002."

[dependencies]
mcp-core = { path = "../mcp-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
thiserror.workspace = true

# LMU exposes a local REST API (127.0.0.1:6397, confirmed live 2026-07-13 —
# see docs/adr/0002-lmu-adapter-design.md's Amendment) that `adapter/sdk.rs`
# talks to as a plain HTTP client. No TLS is needed (loopback, plain HTTP),
# so the TLS backend is disabled to keep the dependency tree small.
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = "0.7"
http-body-util = "0.1"
tower = "0.5"

