[package]
name = "mcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared MCP JSON-RPC layer, transports, and config-merge helpers for simulator-mcp-servers."

[dependencies]
async-trait.workspace = true
axum = "0.7"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
http-body-util = "0.1"
tower = "0.5"
